--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ in Greece.
   </footer>
   <script type="text/javascript" src="index.js" charset="utf-8"></script>
 </body>
